--- a/system/app/Widgets/Quote/views/address.quote.phtml
+++ b/system/app/Widgets/Quote/views/address.quote.phtml
@@ -1,6 +1,8 @@
 <?php if($this->editAllowed): ?>
-	<div class="quote-info <?php echo ($this->allowAutoSaveAddress) ? 'allow-auto-save-address' : '';?>" id="<?php echo ($this->addressType == Widgets_Quote_Quote::ADDRESS_TYPE_BILLING) ? 'quote-billing-info' : 'quote-shipping-info';?>">
-		<p class="title"><?php echo ($this->addressType == Widgets_Quote_Quote::ADDRESS_TYPE_BILLING) ? $this->translate('Billing info') : $this->translate('Shipped to'); ?></p>
+	<div class="quote-info <?php echo ($this->allowAutoSave) ? 'allow-auto-save' : '';?>" id="<?php echo ($this->addressType == Widgets_Quote_Quote::ADDRESS_TYPE_BILLING) ? 'quote-billing-info' : 'quote-shipping-info';?>">
+		<p class="title"><?php echo ($this->addressType == Widgets_Quote_Quote::ADDRESS_TYPE_BILLING) ? $this->translate('Billing info') : $this->translate('Shipped to'); ?>
+            <span class="ticon-refresh use-lead-address pointer fl-right" data-type="<?php echo ($this->addressType == Widgets_Quote_Quote::ADDRESS_TYPE_BILLING) ? 'billing' : 'shipping';?>"> </span>
+        </p>
 		<?php echo $this->addressForm; ?>
 	</div>
 <?php else: ?>
