--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -57,11 +57,11 @@
             <i class="ticon-info tooltip icon18" title="<?php echo $this->translate('Create templates from the action e-mails & SMS screens');?>"></i>
             <?php echo $this->form->getElement('enabledPartialPayment')->renderViewHelper(); ?>
         </p>
-        <p id="partial-notify-after-quantity-block" class="<?php echo $displayPartialPaymentClass;?>">
+        <p id="partial-notify-after-quantity-block" class="mb5px grid_6 <?php echo $displayPartialPaymentClass;?>">
             <?php echo $this->form->getElement('partialNotifyAfterQuantity')->renderLabel(); ?>
             <?php echo $this->form->getElement('partialNotifyAfterQuantity')->renderViewHelper(); ?>
         </p>
-        <p id="partial-notify-after-type-block" class="<?php echo $displayPartialPaymentClass;?>">
+        <p id="partial-notify-after-type-block" class="mb5px grid_6 <?php echo $displayPartialPaymentClass;?>">
             <?php echo $this->form->getElement('partialNotifyAfterType')->renderLabel(); ?>
             <?php echo $this->form->getElement('partialNotifyAfterType')->renderViewHelper(); ?>
         </p>
