--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -2,7 +2,7 @@
 $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config')->getConfig();
 ?>
 <?php echo $this->form; ?>
-<?php $key = microtime();?>
+<?php $key = mt_rand(100, 10000);?>
 <?php if(!Tools_Security_Acl::isAllowed(Shopping::RESOURCE_STORE_MANAGEMENT)):?>
     <?php $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config')->getConfig(); ?>
     <div id="plugin-quote-quoteform-captcha-<?php echo $key;?>" class="g-recaptcha" data-sitekey="<?php echo $websiteConfig[Tools_System_Tools::GRECAPTCHA_PUBLIC_KEY];?>"></div>
@@ -14,9 +14,8 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
         if(!Tools_Security_Acl::isAllowed(Shopping::RESOURCE_STORE_MANAGEMENT)):?>
              // var grecaptchaContainer = document.createElement("div");
              //     grecaptchaContainer.classList.add('g-recaptcha');
-            var grecaptchaContainer = document.getElementById('plugind-quote-quoteform-captcha-<?php echo $key;?>'),
+            var grecaptchaContainer = $('#plugin-quote-quoteform-captcha-<?php echo $key;?>'),
                 grecaptchaPlace = $('#plugin-quote-quoteform input[type="submit"]');
-
                 if (grecaptchaContainer !== null && grecaptchaPlace.length && grecaptchaContainer.length) {
                      grecaptchaPlace.before(grecaptchaContainer);
                 }
