--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -42,7 +42,15 @@
             <?php endif;?>
         <?php else:?>
             <span id="quote-type-info-message">
-                <?php echo $this->translate('We received your');?> <?php echo round($this->partialPercentage, 1);?>%     <?php echo $this->translate('deposit of');?> <?php echo $this->currency($this->partialAmountPaid);?> on <?php echo $this->partialPaidDate;?> on this quote, and we thank you for it. <?php echo $this->translate('Please pay the remaining amount of');?> <?php echo $this->currency($this->leftAmountToPaid);?> <?php echo $this->translate('When instructed to do so using the credit card form below');?> :
+                <?php echo $this->translate('We received your');?>
+                <?php if ($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_AMOUNT):?>
+                    <?php echo $this->currency(round($this->partialPercentage, 1));?>
+                    <?php echo $this->translate('deposit');?>
+                <?php else:?>
+                    <?php echo round($this->partialPercentage, 1);?> %
+                    <?php echo $this->translate('deposit of');?> <?php echo $this->currency($this->partialAmountPaid);?>
+                <?php endif;?>
+                 on <?php echo $this->partialPaidDate;?> on this quote, and we thank you for it. <?php echo $this->translate('Please pay the remaining amount of');?> <?php echo $this->currency($this->leftAmountToPaid);?> <?php echo $this->translate('When instructed to do so using the credit card form below');?> :
             </span>
         <?php endif;?>
     <?php elseif ($this->paymentType === Quote_Models_Model_Quote::PAYMENT_TYPE_ONLY_SIGNATURE): ?>
