--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -22,9 +22,18 @@
                             <option value="amount" <?php echo ($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_AMOUNT) ? 'selected':'';?>><?php echo $this->currency;?></option>
                         </select>
                     <?php else:?>
-                        <?php echo round($this->partialPercentage, 1);?>
+                        <?php if($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE):?>
+                            <?php echo round($this->partialPercentage, 1);?>
+                        <?php else:?>
+                            <?php echo $this->currency($this->partialPercentage, 1);?>
+                        <?php endif;?>
                     <?php endif;?>
-                    % <?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
+                    <?php if($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE):?>
+                        %
+                        <?php echo $this->translate('which is');?>
+                        <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span>
+                    <?php endif;?>
+                  <?php echo $this->translate('using the credit card form below');?>:
                 </span>
             <?php else:?>
                 <span id="quote-type-info-message"><?php echo $this->translate('Please sign and validate your signature first, then to get things started, please make a non-refundable down payment of ');?>
