--- a/system/app/Widgets/Quote/views/partial-payment-select-info.phtml
+++ b/system/app/Widgets/Quote/views/partial-payment-select-info.phtml
@@ -3,5 +3,5 @@
 <select id="partial-payment-type" name="partial-payment-type">
     <option value="percentage" <?php echo ($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE) ? 'selected':'';?>>%</option>
     <option value="amount" <?php echo ($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_AMOUNT) ? 'selected':'';?>><?php echo $this->currency;?></option>
-</select> <?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount">
-  <?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
+</select> <span id="percentage-amount-text" class="<?php echo ($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE) ? '' : 'hidden';?>"><?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount">
+        <?php echo $this->partialToPayAmount;?></span></span> <?php echo $this->translate('using the credit card form below');?>:
