--- a/system/app/Widgets/Quote/views/quote-type-info.phtml
+++ b/system/app/Widgets/Quote/views/quote-type-info.phtml
@@ -29,7 +29,6 @@
                         <?php endif;?>
                     <?php endif;?>
                     <?php if($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE):?>
-                        %
                         <?php echo $this->translate('which is');?>
                         <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span>
                     <?php endif;?>
@@ -46,7 +45,13 @@
                 <?php else:?>
                     <?php echo round($this->partialPercentage, 1);?>
                 <?php endif;?>
-                % <?php echo $this->translate('which is');?> <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span> <?php echo $this->translate('using the credit card form below');?>:
+                <?php if($this->partialPaymentType === Models_Model_CartSession::CART_PARTIAL_PAYMENT_TYPE_PERCENTAGE):?>
+                    <?php $infoTextClass = '';?>
+                <?php else:?>
+                    <?php $infoTextClass = 'hidden';?>
+                <?php endif;?>
+                    <span id="percentage-amount-text" class="<?php echo $infoTextClass;?>"><?php echo $this->translate('which is');?>
+                        <span id="partial-payment-percentage-payment-amount"><?php echo $this->partialToPayAmount;?></span></span> <?php echo $this->translate('using the credit card form below');?>:
             </span>
             <?php endif;?>
         <?php else:?>
