--- a/system/views/layout.phtml
+++ b/system/views/layout.phtml
@@ -16,7 +16,8 @@
                 ->prependStylesheet($this->websiteUrl . 'plugins/shopping/web/css/store.css')
                 ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster.css')
                 ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster-ui.css')
-                ->prependStylesheet($this->websiteUrl . 'system/css/reset.css');
+                ->prependStylesheet($this->websiteUrl . 'system/css/reset.css')
+                ->prependStylesheet($this->websiteUrl . 'system/css/icons.css');
             echo $this->headLink();
 	        echo $this->headStyle();
 	        $this->jQuery()->enable();
